--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.7.0
 anyio==4.10.0
 certifi==2025.8.3
+click==8.2.1
 exceptiongroup==1.3.0
 fastapi==0.116.1
 h11==0.16.0
@@ -17,3 +18,4 @@ sqlmodel==0.0.24
 starlette==0.47.3
 typing-inspection==0.4.1
 typing_extensions==4.15.0
+uvicorn==0.35.0
